--- a/index.html
+++ b/index.html
@@ -13,268 +13,8 @@
     <div class="ui-controller">
         <div class="menu-bar">
 
-            <div class="file" onclick="readTextFile('ipsum');" title="Les merveilleuses aventures d'Ipsum - Volume II">
-                <p class="file-name">Les merveilleuses aventures d'Ipsum - Volume II</p>
-            </div>
-
-            <div class="file" onclick="readTextFile('lorem');" title="Lorem et le soleil de l'autre monde">
-                <p class="file-name">Lorem et le soleil de l'autre monde</p>
-            </div>
-
-            <div class="file" onclick="readTextFile('guerre-de-birmanie-je-vois-jaune');" title="Guerre de Birmanie : je vois jaune !">
-                    <p class="file-name">Guerre de Birmanie : je vois jaune !</p>
-            </div>
-
-            <div class="file" onclick="readTextFile('ipsum');" title="Les merveilleuses aventures d'Ipsum - Volume II">
-                <p class="file-name">Les merveilleuses aventures d'Ipsum - Volume II</p>
-            </div>
-
-            <div class="file" onclick="readTextFile('lorem');" title="Lorem et le soleil de l'autre monde">
-                <p class="file-name">Lorem et le soleil de l'autre monde</p>
-            </div>
-
-            <div class="file" onclick="readTextFile('guerre-de-birmanie-je-vois-jaune');" title="Guerre de Birmanie : je vois jaune !">
-                    <p class="file-name">Guerre de Birmanie : je vois jaune !</p>
-            </div>
-
-            <div class="file" onclick="readTextFile('ipsum');" title="Les merveilleuses aventures d'Ipsum - Volume II">
-                <p class="file-name">Les merveilleuses aventures d'Ipsum - Volume II</p>
-            </div>
-
-            <div class="file" onclick="readTextFile('lorem');" title="Lorem et le soleil de l'autre monde">
-                <p class="file-name">Lorem et le soleil de l'autre monde</p>
-            </div>
-
-            <div class="file" onclick="readTextFile('guerre-de-birmanie-je-vois-jaune');" title="Guerre de Birmanie : je vois jaune !">
-                    <p class="file-name">Guerre de Birmanie : je vois jaune !</p>
-            </div>
-
-            <div class="file" onclick="readTextFile('ipsum');" title="Les merveilleuses aventures d'Ipsum - Volume II">
-                <p class="file-name">Les merveilleuses aventures d'Ipsum - Volume II</p>
-            </div>
-
-            <div class="file" onclick="readTextFile('lorem');" title="Lorem et le soleil de l'autre monde">
-                <p class="file-name">Lorem et le soleil de l'autre monde</p>
-            </div>
-
-            <div class="file" onclick="readTextFile('guerre-de-birmanie-je-vois-jaune');" title="Guerre de Birmanie : je vois jaune !">
-                    <p class="file-name">Guerre de Birmanie : je vois jaune !</p>
-            </div>
-
-            <div class="file" onclick="readTextFile('ipsum');" title="Les merveilleuses aventures d'Ipsum - Volume II">
-                <p class="file-name">Les merveilleuses aventures d'Ipsum - Volume II</p>
-            </div>
-
-            <div class="file" onclick="readTextFile('lorem');" title="Lorem et le soleil de l'autre monde">
-                <p class="file-name">Lorem et le soleil de l'autre monde</p>
-            </div>
-
-            <div class="file" onclick="readTextFile('guerre-de-birmanie-je-vois-jaune');" title="Guerre de Birmanie : je vois jaune !">
-                    <p class="file-name">Guerre de Birmanie : je vois jaune !</p>
-            </div>
-
-            <div class="file" onclick="readTextFile('ipsum');" title="Les merveilleuses aventures d'Ipsum - Volume II">
-                <p class="file-name">Les merveilleuses aventures d'Ipsum - Volume II</p>
-            </div>
-
-            <div class="file" onclick="readTextFile('lorem');" title="Lorem et le soleil de l'autre monde">
-                <p class="file-name">Lorem et le soleil de l'autre monde</p>
-            </div>
-
-            <div class="file" onclick="readTextFile('guerre-de-birmanie-je-vois-jaune');" title="Guerre de Birmanie : je vois jaune !">
-                    <p class="file-name">Guerre de Birmanie : je vois jaune !</p>
-            </div>
-
-            <div class="file" onclick="readTextFile('ipsum');" title="Les merveilleuses aventures d'Ipsum - Volume II">
-                <p class="file-name">Les merveilleuses aventures d'Ipsum - Volume II</p>
-            </div>
-
-            <div class="file" onclick="readTextFile('lorem');" title="Lorem et le soleil de l'autre monde">
-                <p class="file-name">Lorem et le soleil de l'autre monde</p>
-            </div>
-
-            <div class="file" onclick="readTextFile('guerre-de-birmanie-je-vois-jaune');" title="Guerre de Birmanie : je vois jaune !">
-                    <p class="file-name">Guerre de Birmanie : je vois jaune !</p>
-            </div>
-
-            <div class="file" onclick="readTextFile('ipsum');" title="Les merveilleuses aventures d'Ipsum - Volume II">
-                <p class="file-name">Les merveilleuses aventures d'Ipsum - Volume II</p>
-            </div>
-
-            <div class="file" onclick="readTextFile('lorem');" title="Lorem et le soleil de l'autre monde">
-                <p class="file-name">Lorem et le soleil de l'autre monde</p>
-            </div>
-
-            <div class="file" onclick="readTextFile('guerre-de-birmanie-je-vois-jaune');" title="Guerre de Birmanie : je vois jaune !">
-                    <p class="file-name">Guerre de Birmanie : je vois jaune !</p>
-            </div>
-
-            <div class="file" onclick="readTextFile('ipsum');" title="Les merveilleuses aventures d'Ipsum - Volume II">
-                <p class="file-name">Les merveilleuses aventures d'Ipsum - Volume II</p>
-            </div>
-
-            <div class="file" onclick="readTextFile('lorem');" title="Lorem et le soleil de l'autre monde">
-                <p class="file-name">Lorem et le soleil de l'autre monde</p>
-            </div>
-
-            <div class="file" onclick="readTextFile('guerre-de-birmanie-je-vois-jaune');" title="Guerre de Birmanie : je vois jaune !">
-                    <p class="file-name">Guerre de Birmanie : je vois jaune !</p>
-            </div>
-
-            <div class="file" onclick="readTextFile('ipsum');" title="Les merveilleuses aventures d'Ipsum - Volume II">
-                <p class="file-name">Les merveilleuses aventures d'Ipsum - Volume II</p>
-            </div>
-
-            <div class="file" onclick="readTextFile('lorem');" title="Lorem et le soleil de l'autre monde">
-                <p class="file-name">Lorem et le soleil de l'autre monde</p>
-            </div>
-
-            <div class="file" onclick="readTextFile('guerre-de-birmanie-je-vois-jaune');" title="Guerre de Birmanie : je vois jaune !">
-                    <p class="file-name">Guerre de Birmanie : je vois jaune !</p>
-            </div>
-
-            <div class="file" onclick="readTextFile('ipsum');" title="Les merveilleuses aventures d'Ipsum - Volume II">
-                <p class="file-name">Les merveilleuses aventures d'Ipsum - Volume II</p>
-            </div>
-
-            <div class="file" onclick="readTextFile('lorem');" title="Lorem et le soleil de l'autre monde">
-                <p class="file-name">Lorem et le soleil de l'autre monde</p>
-            </div>
-
-            <div class="file" onclick="readTextFile('guerre-de-birmanie-je-vois-jaune');" title="Guerre de Birmanie : je vois jaune !">
-                    <p class="file-name">Guerre de Birmanie : je vois jaune !</p>
-            </div>
-
-            <div class="file" onclick="readTextFile('ipsum');" title="Les merveilleuses aventures d'Ipsum - Volume II">
-                <p class="file-name">Les merveilleuses aventures d'Ipsum - Volume II</p>
-            </div>
-
-            <div class="file" onclick="readTextFile('lorem');" title="Lorem et le soleil de l'autre monde">
-                <p class="file-name">Lorem et le soleil de l'autre monde</p>
-            </div>
-
-            <div class="file" onclick="readTextFile('guerre-de-birmanie-je-vois-jaune');" title="Guerre de Birmanie : je vois jaune !">
-                    <p class="file-name">Guerre de Birmanie : je vois jaune !</p>
-            </div>
-
-            <div class="file" onclick="readTextFile('ipsum');" title="Les merveilleuses aventures d'Ipsum - Volume II">
-                <p class="file-name">Les merveilleuses aventures d'Ipsum - Volume II</p>
-            </div>
-
-            <div class="file" onclick="readTextFile('lorem');" title="Lorem et le soleil de l'autre monde">
-                <p class="file-name">Lorem et le soleil de l'autre monde</p>
-            </div>
-
-            <div class="file" onclick="readTextFile('guerre-de-birmanie-je-vois-jaune');" title="Guerre de Birmanie : je vois jaune !">
-                    <p class="file-name">Guerre de Birmanie : je vois jaune !</p>
-            </div>
-
-            <div class="file" onclick="readTextFile('ipsum');" title="Les merveilleuses aventures d'Ipsum - Volume II">
-                <p class="file-name">Les merveilleuses aventures d'Ipsum - Volume II</p>
-            </div>
-
-            <div class="file" onclick="readTextFile('lorem');" title="Lorem et le soleil de l'autre monde">
-                <p class="file-name">Lorem et le soleil de l'autre monde</p>
-            </div>
-
-            <div class="file" onclick="readTextFile('guerre-de-birmanie-je-vois-jaune');" title="Guerre de Birmanie : je vois jaune !">
-                    <p class="file-name">Guerre de Birmanie : je vois jaune !</p>
-            </div>
-
-            <div class="file" onclick="readTextFile('ipsum');" title="Les merveilleuses aventures d'Ipsum - Volume II">
-                <p class="file-name">Les merveilleuses aventures d'Ipsum - Volume II</p>
-            </div>
-
-            <div class="file" onclick="readTextFile('lorem');" title="Lorem et le soleil de l'autre monde">
-                <p class="file-name">Lorem et le soleil de l'autre monde</p>
-            </div>
-
-            <div class="file" onclick="readTextFile('guerre-de-birmanie-je-vois-jaune');" title="Guerre de Birmanie : je vois jaune !">
-                    <p class="file-name">Guerre de Birmanie : je vois jaune !</p>
-            </div>
-
-            <div class="file" onclick="readTextFile('ipsum');" title="Les merveilleuses aventures d'Ipsum - Volume II">
-                <p class="file-name">Les merveilleuses aventures d'Ipsum - Volume II</p>
-            </div>
-
-            <div class="file" onclick="readTextFile('lorem');" title="Lorem et le soleil de l'autre monde">
-                <p class="file-name">Lorem et le soleil de l'autre monde</p>
-            </div>
-
-            <div class="file" onclick="readTextFile('guerre-de-birmanie-je-vois-jaune');" title="Guerre de Birmanie : je vois jaune !">
-                    <p class="file-name">Guerre de Birmanie : je vois jaune !</p>
-            </div>
-
-            <div class="file" onclick="readTextFile('ipsum');" title="Les merveilleuses aventures d'Ipsum - Volume II">
-                <p class="file-name">Les merveilleuses aventures d'Ipsum - Volume II</p>
-            </div>
-
-            <div class="file" onclick="readTextFile('lorem');" title="Lorem et le soleil de l'autre monde">
-                <p class="file-name">Lorem et le soleil de l'autre monde</p>
-            </div>
-
-            <div class="file" onclick="readTextFile('guerre-de-birmanie-je-vois-jaune');" title="Guerre de Birmanie : je vois jaune !">
-                    <p class="file-name">Guerre de Birmanie : je vois jaune !</p>
-            </div>
-
-            <div class="file" onclick="readTextFile('ipsum');" title="Les merveilleuses aventures d'Ipsum - Volume II">
-                <p class="file-name">Les merveilleuses aventures d'Ipsum - Volume II</p>
-            </div>
-
-            <div class="file" onclick="readTextFile('lorem');" title="Lorem et le soleil de l'autre monde">
-                <p class="file-name">Lorem et le soleil de l'autre monde</p>
-            </div>
-
-            <div class="file" onclick="readTextFile('guerre-de-birmanie-je-vois-jaune');" title="Guerre de Birmanie : je vois jaune !">
-                    <p class="file-name">Guerre de Birmanie : je vois jaune !</p>
-            </div>
-
-            <div class="file" onclick="readTextFile('ipsum');" title="Les merveilleuses aventures d'Ipsum - Volume II">
-                <p class="file-name">Les merveilleuses aventures d'Ipsum - Volume II</p>
-            </div>
-
-            <div class="file" onclick="readTextFile('lorem');" title="Lorem et le soleil de l'autre monde">
-                <p class="file-name">Lorem et le soleil de l'autre monde</p>
-            </div>
-
-            <div class="file" onclick="readTextFile('guerre-de-birmanie-je-vois-jaune');" title="Guerre de Birmanie : je vois jaune !">
-                    <p class="file-name">Guerre de Birmanie : je vois jaune !</p>
-            </div>
-
-            <div class="file" onclick="readTextFile('ipsum');" title="Les merveilleuses aventures d'Ipsum - Volume II">
-                <p class="file-name">Les merveilleuses aventures d'Ipsum - Volume II</p>
-            </div>
-
-            <div class="file" onclick="readTextFile('lorem');" title="Lorem et le soleil de l'autre monde">
-                <p class="file-name">Lorem et le soleil de l'autre monde</p>
-            </div>
-
-            <div class="file" onclick="readTextFile('guerre-de-birmanie-je-vois-jaune');" title="Guerre de Birmanie : je vois jaune !">
-                    <p class="file-name">Guerre de Birmanie : je vois jaune !</p>
-            </div>
-
-            <div class="file" onclick="readTextFile('ipsum');" title="Les merveilleuses aventures d'Ipsum - Volume II">
-                <p class="file-name">Les merveilleuses aventures d'Ipsum - Volume II</p>
-            </div>
-
-            <div class="file" onclick="readTextFile('lorem');" title="Lorem et le soleil de l'autre monde">
-                <p class="file-name">Lorem et le soleil de l'autre monde</p>
-            </div>
-
-            <div class="file" onclick="readTextFile('guerre-de-birmanie-je-vois-jaune');" title="Guerre de Birmanie : je vois jaune !">
-                    <p class="file-name">Guerre de Birmanie : je vois jaune !</p>
-            </div>
-
-            <div class="file" onclick="readTextFile('ipsum');" title="Les merveilleuses aventures d'Ipsum - Volume II">
-                <p class="file-name">Les merveilleuses aventures d'Ipsum - Volume II</p>
-            </div>
-
-            <div class="file" onclick="readTextFile('lorem');" title="Lorem et le soleil de l'autre monde">
-                <p class="file-name">Lorem et le soleil de l'autre monde</p>
-            </div>
-
-            <div class="file" onclick="readTextFile('guerre-de-birmanie-je-vois-jaune');" title="Guerre de Birmanie : je vois jaune !">
-                    <p class="file-name">Guerre de Birmanie : je vois jaune !</p>
+            <div class="file" onclick="readTextFile('plan-officiel-de-lancement-du-systeme-economique-de-la-nouvelle-birmanie');" title="Plan officiel de lancement du système économique de la Nouvelle Birmanie">
+                <p class="file-name">Plan officiel de lancement du système économique de la Nouvelle Birmanie</p>
             </div>
 
         </div>
