--- a/pagina/plan-officiel-de-lancement-du-systeme-economique-de-la-nouvelle-birmanie.html
+++ b/pagina/plan-officiel-de-lancement-du-systeme-economique-de-la-nouvelle-birmanie.html
@@ -1,17 +1,16 @@
-<p class="title">Guerre de Birmanie : je vois jaune</p>
+<p class="title">Plan officiel de lancement du système économique de la Nouvelle Birmanie</p>
 <p class="inetlllothüshune">
-    Quelqu'un a été tué sur le Yellow. Mais pourquoi, et par qui ?
+    Comment faire des bénéfices et amasser un maximum d'argent ? Ce document répond à ces questions en proposant une démarche faisable à
+    long terme.
 </p>
 
 <div class="text-container">
 
-    <p class="chapter-title">Tu me touche, je te tire dessus</p>
+    <!-- <p class="chapter-title">L'Europe, du congrès de Vienne jusqu'à l'éveil des nationalités</p> -->
     <p class="paragraphe">
-        Après la défaite de Napoléon en 1814, les représentants des puissances européennes se réunirent à Vienne entre Septembre 1814 et Juin 1815.
-        Le congrès de Vienne rassemble les puissances Victorieuses : le Royaume-Uni, la Prusse, l'Autriche et la Russie.
-        Il est présidé par l'Autriche ou plus précisément par Klemens Metternich, alors chancelier du même pays.
-        Il est issue de la haute noblesse mais sa famille a été dépossédée de ces terres par des révolutionnaires français.
-        Il est d'ailleurs très hostile à l'égard des idées Révolutionnaires.
+        Pour lancer l'économie de la Nouvelle Birmanie, le gouvernement Birman propose deux activités lucratives dont la construction
+        d'infrastructures et l'exploitation de champs. La première activité débouchera sur des notations, cependant nous ne détaillerons
+        que la seconde activité, l'agriculture.
         <br>
         Le Congrès de Vienne affirme deux grands principes :
         En préservant les équilibres politiques entre les puissances d'Europe, on souhaite s'assurer qu'aucune puissance ne s'impose au détriment des autres.
