--- a/pagina/plan-officiel-de-lancement-du-systeme-economique-de-la-nouvelle-birmanie.html
+++ b/pagina/plan-officiel-de-lancement-du-systeme-economique-de-la-nouvelle-birmanie.html
@@ -12,23 +12,16 @@
         d'infrastructures et l'exploitation de champs. La première activité débouchera sur des notations, cependant nous ne détaillerons
         que la seconde activité, l'agriculture.
         <br>
-        Le Congrès de Vienne affirme deux grands principes :
-        En préservant les équilibres politiques entre les puissances d'Europe, on souhaite s'assurer qu'aucune puissance ne s'impose au détriment des autres.
-        Ce principe est associé à l'idée d'un concept européen, une concertation permanente entre les puissances pour empêcher la guerre et maintenir un équilibre.
-        Le rétablissement des monarchies et des anciennes dynasties qui régnaient avant la Révolution comme les Bourbons et, le rejet de l'idée du peuple souverain en affirmant la légitimité dynastique.
-        Selon eux, le pouvoir doit appartenir à la dynastie qui règne sur un pays.
-        C'est le triomphe de l'idéologie réactionnaire qui aboutit au début de la Restauration.
-        Cette notion-là pointe le rétablissement d'un ordre ancien avec le retour de la monarchie autoritaire entre 1814 et 1830.
-        Le congrès Vienne permet aux vainqueurs de se partager de manière équitable les anciens territoires de l'empire Napoléonnien.
-        Le Royaume de Prusse s'agrandit de façon considérable au détriment de la Saxe, la Russie, l'Autriche et la Prusse se partagent la Pologne et
-        la France reprit ses frontières comme elles l'eutent été en 1792.
-        Le congrès crée des Etats-tampons. Ces Etats sont des pays situés entre plusieurs grandes puissances et qui ont pour objectif d'éviter d'éventuels conflits.
-        Citons le cas du Royaume des Pays-Bas entre la France et la Prusse.
-        Plusieurs peuples sont mécontents du découpage territorial opéré par le congrès de Vienne :
-        Les belges sont dirigés par une dynastie étrangère dans le Royaume des Pays-Bas.
-        Certaines populations sont dominées par plusieurs puissances comme, par exemple, la Pologne qui est dominée par la Prusse, l'Autriche et la Russie.
-        Dernière situation : l'Allemagne et l'Italie qui sont divisées en plusieurs Etats. Il existe une confédération Germanique qui est divisée en trente-trois Etats allemands qui se réunissent dans une assemblée dirigée par la Prusse.
-        Le congrès de Vienne a pour objectif de revenir à la situation d'avant la Révolution et d'instaurer un nouvel ordre européen.
+        Être agriculteur est fastidieux. Il faut être patient et répéter les mêmes actions, qui sont de semer, récolter puis semer, encore et encore.
+        Mais le travail paye, et avec de grands efforts arrivent de grands gains.
+        <br>
+        L'exportation de produits alimentaires en grande quantité et au prix d'un dollar l'unité permettra sans aucun doute de faire entrer bien plus
+        d'argent que la mise en vente disons d'une centaine d'extrême chili à cinq dollars chacun. En effet, en baissant les prix de la marchandise,
+        l'on cible un type de client spécifique : les sans-pays.
+        <br>
+        Cette catégorie représente une proportion conséquente de joueurs sur Nations Glory. Beaucoup sont ceux qui vont en Amérique du Sud et, profitant
+        de l'abondance du bois qui s'y trouve, s'établissent et érigent leur base particulière (exemple : Base des Lilas). Ces débutants fabriquent des
+        coffres, creusent des mines et aménagent des champs, comme l'Union à la Contrabase et à Lollipop.
     </p>
 
     <p class="chapter-title">L'Europe, du congrès de Vienne jusqu'à l'éveil des nationalités</p>
