--- a/pagina/plan-officiel-de-lancement-du-systeme-economique-de-la-nouvelle-birmanie.html
+++ b/pagina/plan-officiel-de-lancement-du-systeme-economique-de-la-nouvelle-birmanie.html
@@ -22,6 +22,10 @@
         Cette catégorie représente une proportion conséquente de joueurs sur Nations Glory. Beaucoup sont ceux qui vont en Amérique du Sud et, profitant
         de l'abondance du bois qui s'y trouve, s'établissent et érigent leur base particulière (exemple : Base des Lilas). Ces débutants fabriquent des
         coffres, creusent des mines et aménagent des champs, comme l'Union à la Contrabase et à Lollipop.
+        À eux, nous ne leur fournirons ni bambou, ni white flowers, mais plutôt de la poudre d'os, du papier, des teintures, des poches d'encre, etc.
+        C'est la technique Fish : fournir du poisson au lieu d'enseigner la pêche, ce qui, dans notre cas, revient à fournir de la poudre d'os et non
+        pas de white flowers. Pour le bois, nous userons de la technique Plank : si l'on vend un tron, l'on gagne un dollars, alors que si l'on vend
+        quatre planches de bois, un tronc divisé par quatre, l'on remporte quatre dollars.
     </p>
 
     <p class="chapter-title">L'Europe, du congrès de Vienne jusqu'à l'éveil des nationalités</p>
