--- a/pagina/plan-officiel-de-lancement-du-systeme-economique-de-la-nouvelle-birmanie.html
+++ b/pagina/plan-officiel-de-lancement-du-systeme-economique-de-la-nouvelle-birmanie.html
@@ -45,6 +45,29 @@
         Aussi, une nouveauté accélérera le lancement du système économique de la Nouvelle Birmanie. C'est Sumathe, dont le nom provient de Sumatra,
         qui est le premier pays et le premier échecs de l'Union. Sumathe est un kmg désaffecté depuis le disband de l'union de l'Union au Sumatra.
         Situé sur le littoral Est du Sumatra en Océanie, il est caché et hors de porté des claims de ce pays.
+        <br>
+        À l'intérieur du kutell, sous quelques couches de terre, se trouve le sas principal, point culminant et où sont disposés des tabloïdes indicateurs
+        de direction. C'est ici qu'il est le plus judicieux, pour les Sumathoje, de définir son home.
+        <br>
+        En descendant l'escalier Nord, l'on arrive à Puvüphononshe, ville souterraine qui ne verra probablement jamais le jour, dans le sens où sa
+        construction prendrait trop de temps alors que la Nouvelle Birmanie a besoin de ce temps si précieux.
+        <br>
+        Au Sud et à l'Ouest, si l'on descend, l'on accèdera aux fermes spécifiques aux white flowers ainsi qu'au bambou. Ces espaces agricoles n'ont
+        pas encore été aménagés, mais leur utilité est flagrante : la sécurité et l'optimisation et le transport des ressources alimentaires. En effet,
+        dans l'hypothèse où la Birmanie subirait un disband, les graines, préalablement décentralisées, seront alors hors de tout danger. Mais encore,
+        le fait d'aménager un champs en prévision de recevoir une seule et même espèce de plante utile pour toutes les autres espèces, à savoir les
+        white flowers, offrira une gestion du transport de ressources destinées à l'alimentation plus aisé à l'avenir.
+        <br>
+        Toujours au sas principal de Sumathe, à l'Est, se trouve une mine, lieu indispensable pour se fournir en métaux dont notamment du fer et du
+        charbon.
+    </p>
+
+    <p>
+        Plan officiel de lancement du système économique de la Nouvelle Birmanie (POLSÉNB)
+        <br>
+        ConektNeue, Secrétaire d'Etat de la Birmanie
+        <br>
+        Le 22 janvier 2022
     </p>
 
 </div>
