--- a/pagina/plan-officiel-de-lancement-du-systeme-economique-de-la-nouvelle-birmanie.html
+++ b/pagina/plan-officiel-de-lancement-du-systeme-economique-de-la-nouvelle-birmanie.html
@@ -62,7 +62,7 @@
         charbon.
     </p>
 
-    <p>
+    <p class="legend">
         Plan officiel de lancement du système économique de la Nouvelle Birmanie (POLSÉNB)
         <br>
         ConektNeue, Secrétaire d'Etat de la Birmanie
