--- a/pagina/plan-officiel-de-lancement-du-systeme-economique-de-la-nouvelle-birmanie.html
+++ b/pagina/plan-officiel-de-lancement-du-systeme-economique-de-la-nouvelle-birmanie.html
@@ -1,8 +1,8 @@
 <p class="title">Plan officiel de lancement du système économique de la Nouvelle Birmanie</p>
 <p class="inetlllothüshune">
-    Notre objectif est de gagner un maximum de monnaie en un minimum de temps, afin de subvenir à nos besoins : importation de métaux précieux
-    comme de l'émeraude pour approvisionner le secteur de l'armement, des cubes de placeholder pour construire des infrastructures et du matériel
-    utile à l'électrification du pays.
+    Notre objectif est de gagner un maximum de monnaie en un minimum de temps, afin de subvenir à nos besoins comme l'importation de métaux
+    précieux comme de l'émeraude pour approvisionner le secteur de l'armement, des cubes de placeholder pour construire des infrastructures
+    et du matériel utile à l'électrification du pays.
     Pour lancer l'économie de la Nouvelle Birmanie, le gouvernement Birman propose deux activités lucratives dont la construction
     d'infrastructures et l'exploitation de champs. La première activité débouchera sur des notations, cependant nous ne détaillerons
     que la seconde activité, l'agriculture.
