--- a/index.html
+++ b/index.html
@@ -16,6 +16,16 @@
             <div class="file" onclick="readTextFile('plan-officiel-de-lancement-du-systeme-economique-de-la-nouvelle-birmanie');" title="Plan officiel de lancement du système économique de la Nouvelle Birmanie">
                 <p class="file-name">Plan officiel de lancement du système économique de la Nouvelle Birmanie</p>
             </div>
+            <div class="file" onclick="readTextFile('linguistiquement-parlant');" title="Linguistiquement parlant">
+                <p class="file-name">Linguistiquement parlant</p>
+            </div>
+
+            <div class="btn-bar">
+                <div class="btn-btnbar"></div>
+                <div class="btn-btnbar"></div>
+                <div class="btn-btnbar"></div>
+                <div class="btn-btnbar"></div>
+            </div>
 
         </div>
 
