--- a/index.html
+++ b/index.html
@@ -13,11 +13,12 @@
     <div class="ui-controller">
         <div class="menu-bar">
 
+            <div class="file" onclick="readTextFile('decret-un---nouvelle-birmanie');" title="Décret 1 - Nouvelle Birmanie">
+                <p class="file-name">Décret 1 - Nouvelle Birmanie</p>
+            </div>
+
             <div class="file" onclick="readTextFile('plan-officiel-de-lancement-du-systeme-economique-de-la-nouvelle-birmanie');" title="Plan officiel de lancement du système économique de la Nouvelle Birmanie">
                 <p class="file-name">Plan officiel de lancement du système économique de la Nouvelle Birmanie</p>
-            </div>
-            <div class="file" onclick="readTextFile('linguistiquement-parlant');" title="Linguistiquement parlant">
-                <p class="file-name">Linguistiquement parlant</p>
             </div>
 
             <div class="btn-bar">
