--- a/pagina/plan-officiel-de-lancement-du-systeme-economique-de-la-nouvelle-birmanie.html
+++ b/pagina/plan-officiel-de-lancement-du-systeme-economique-de-la-nouvelle-birmanie.html
@@ -75,7 +75,7 @@
     <p class="legend">
         Plan officiel de lancement du système économique de la Nouvelle Birmanie (POLSÉNB)
         <br>
-        ConektNeue, Secrétaire d'Etat de la Birmanie
+        ConektNeue, Secrétaire d'Etat de la Nouvelle Birmanie
         <br>
         Le 22 janvier 2022
     </p>
