--- a/pagina/premiere-declaration-de-la-crdd.html
+++ b/pagina/premiere-declaration-de-la-crdd.html
@@ -1,9 +1,7 @@
-<p class="title">Décret 1 - Nouvelle Birmanie</p>
+<p class="title">Première déclaration de la C.R.D.D.</p>
 <p class="inetlllothüshune">
-    « Notre objectif est de gagner un maximum de monnaie en un minimum de temps, afin de subvenir à nos besoins dont l'importation de métaux
-    précieux comme de l'émeraude pour approvisionner le secteur de l'armement, des cubes de placeholder pour construire des infrastructures
-    et du matériel utile à l'électrification du pays. »
-    Nous devons aussi aller miner.
+    Car la Nouvelle Birmanie n'est pas ouverte au débat politique, le Parti Ouvrier et Agricole ne verra jamais le jour,
+    le Conseil Constitutionnel non plus, et je souhaite ardemment la chute de ce pays, dont le leadership me dégoûte.
 </p>
 
 <div class="text-container">
