--- a/pagina/premiere-declaration-de-la-crdd.html
+++ b/pagina/premiere-declaration-de-la-crdd.html
@@ -1,7 +1,8 @@
 <p class="title">Première déclaration de la C.R.D.D.</p>
 <p class="inetlllothüshune">
     Car la Nouvelle Birmanie n'est pas ouverte au débat politique, le Parti Ouvrier et Agricole ne verra jamais le jour,
-    le Conseil Constitutionnel non plus, et je souhaite ardemment la chute de ce pays, dont le leadership me dégoûte.
+    le Conseil Constitutionnel non plus, et je souhaite ardemment la chute de ce pays dont le leadership me dégoûte au plus
+    haut point.
 </p>
 
 <div class="text-container">
