--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             </div>
         </div>
 
-        <div class="mask"></div>
+        <!-- <div class="mask"></div>
 
         <div class="settings-modal">
             <p class="title">Paramètres</p>
@@ -47,7 +47,7 @@
                     <div class="settingsbar-togglearea-checkbtn" id="sb_ta_cb_theme"></div>
                 </div>
             </div>
-        </div>
+        </div> -->
     </div>
 
     <script src="./script.js"></script>
