--- a/pagina/plan-officiel-de-lancement-du-systeme-economique-de-la-nouvelle-birmanie.html
+++ b/pagina/plan-officiel-de-lancement-du-systeme-economique-de-la-nouvelle-birmanie.html
@@ -43,9 +43,9 @@
     </p>
     <p class="paragraphe">
         Le plafond de ladite salle, de par sa hauteur d'une dizaine de blocs, était censé provoquer chez les joueurs un sentiment de
-        petitesse face à la démesure de l'endroit et que la puissance de l'Union marque les esprits. Néamoins, par soucis d'optimisation
-        et que, malgré la hauteur de la ferme, le reste du complexe souterrain est présentement ravagé, nous diviserons l'endroit en
-        plusieurs étages de deux blocs de haut. Cela permettra de multiplier la production par cinq.
+        petitesse face à la démesure de l'endroit et que la puissance de l'Union marque les esprits. Néanmoins, par soucis d'optimisation
+        et que, le reste du complexe souterrain a perdu son charme en étant présentement ravagé, la taille n'est plus une condition. Nous
+        diviserons donc l'endroit endroit en plusieurs étages de deux blocs de haut. Cela permettra de multiplier la production par trois.
     </p>
     <p class="paragraphe">
         Aussi, une nouveauté accélérera le lancement du système économique de la Nouvelle Birmanie. C'est Sumathe, dont le nom provient de Sumatra,
