--- a/pagina/premiere-declaration-de-la-crrd.html
+++ b/pagina/premiere-declaration-de-la-crrd.html
@@ -1,4 +1,4 @@
-<p class="title">Première déclaration de la C.R.D.D.</p>
+<p class="title">Première déclaration de la C.R.R.D.</p>
 <p class="inetlllothüshune">
     Car la Nouvelle Birmanie n'est pas ouverte au débat politique, le Parti Ouvrier et Agricole ne verra jamais le jour,
     le Conseil Constitutionnel non plus, et je souhaite ardemment la chute de ce pays dont le leadership me dégoûte au plus
@@ -7,7 +7,6 @@
 
 <div class="text-container">
 
-    <p class="chapter-title">Techniques de ventes simples et enrichissantes</p>
     <p class="paragraphe">
         Les conditions imposées par la présidence d'Eloan sont très dures. Le pays est entièrement surveillé, et si par malheur Eloan découvre n'est-ce que le
         moindre trou, le plus petit qui soit, il retire immédiatement, et ce à tous les membres et officiers du pays, la totalité de leurs permissions, de leurs
@@ -26,9 +25,9 @@
     </p>
 
     <p class="legend">
-        Première déclaration de la C.R.D.D.
+        Première déclaration de la C.R.R.D.
         <br>
-        ConektNeue, Président de la C.R.D.D.
+        ConektNeue, Président de la C.R.R.D.
         <br>
         Le 5 février 2022
     </p>
