--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <div class="ui-controller">
         <div class="menu-bar">
 
-            <div class="file" onclick="readTextFile('premiere-declaration-de-la-crdd');" title="Première déclaration de la C.R.D.D.">
-                <p class="file-name">Première déclaration de la C.R.D.D.</p>
+            <div class="file" onclick="readTextFile('premiere-declaration-de-la-crrd');" title="Première déclaration de la C.R.R.D.">
+                <p class="file-name">Première déclaration de la C.R.R.D.</p>
             </div>
 
             <div class="file" onclick="readTextFile('plan-officiel-de-lancement-du-systeme-economique-de-la-nouvelle-birmanie');" title="Plan officiel de lancement du système économique de la Nouvelle Birmanie">
