--- a/index.html
+++ b/index.html
@@ -32,9 +32,8 @@
         </div>
 
         <div class="ui-standard">
-            <div class="center">
-                <!-- <?php require './pagina/home.html'; ?> -->
-            </div>
+            <p id="pop">¡ Nouveau !</p>
+            <div class="center"></div>
         </div>
 
         <div class="mask"></div>
