--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
         </div>
 
         <div class="ui-standard">
-            <p id="pop">¡ Nouveau !</p>
+            <div class="new-box">
+                <p class="title">Fichier le plus récent</p>
+            </div>
             <div class="center"></div>
         </div>
 
