--- a/pagina/premiere-declaration-de-la-crrd.html
+++ b/pagina/premiere-declaration-de-la-crrd.html
@@ -23,6 +23,9 @@
         ensuivie par la suspension des permissions de BlockStack, et de la mise de tous les autres membres de la coopération en bannissement avec sursis,
         c'est-à-dire que ce n'est qu'un avertissement, mais que, la fois qui suivra, ceux-là seront temporairement expulsés.
     </p>
+    <p class="paragraphe">
+        Aux dernières nouvelles, Eloan a cassé la tombe de Gqmxox et ne lui a rien rendu. Il l'a ensuite rétrogradé à recrue.
+    </p>
 
     <p class="legend">
         Première déclaration de la C.R.R.D.
@@ -30,6 +33,7 @@
         ConektNeue, Président de la C.R.R.D.
         <br>
         Le 5 février 2022
+        Modifié le 6 février 2022
     </p>
 
 </div>
