--- a/pagina/premiere-declaration-de-la-crrd.html
+++ b/pagina/premiere-declaration-de-la-crrd.html
@@ -32,8 +32,7 @@
         <br>
         ConektNeue, Président de la C.R.R.D.
         <br>
-        Le 5 février 2022
-        Modifié le 6 février 2022
+        Le 5 février 2022 et modifié le 6 février 2022
     </p>
 
 </div>
