--- a/pagina/premiere-declaration-de-la-crrd.html
+++ b/pagina/premiere-declaration-de-la-crrd.html
@@ -24,7 +24,8 @@
         c'est-à-dire que ce n'est qu'un avertissement, mais que, la fois qui suivra, ceux-là seront temporairement expulsés.
     </p>
     <p class="paragraphe">
-        Aux dernières nouvelles, Eloan a cassé la tombe de Gqmxox et ne lui a rien rendu. Il l'a ensuite rétrogradé à recrue.
+        Aux dernières nouvelles, Eloan a cassé la tombe de Gqmxox et ne lui a rien rendu (épée volcanite, pioche onyx enchantée, etc.). Il l'a ensuite rétrogradé
+        à recrue. ELOAN EST MALSAIN !
     </p>
 
     <p class="legend">
@@ -32,7 +33,7 @@
         <br>
         ConektNeue, Président de la C.R.R.D.
         <br>
-        Le 5 février 2022 et modifié le 6 février 2022
+        Publié le 5 février 2022 et modifié le 6 février 2022
     </p>
 
 </div>
